--- a/main.css
+++ b/main.css
@@ -6,8 +6,17 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Poppins", sans-serif;
+}
+
+.site {
+  display: flex;
+  flex-direction: column;
 }
 
 /* header */
@@ -68,6 +77,150 @@ body {
   display: none;
 }
 
+nav {
+  height: 50px;
+}
+ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start space-evenly;
+  text-decoration: none;
+}
+li {
+  margin: 10px 40px;
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* spotlight */
+
+.spotlight {
+  position: relative;
+  overflow: auto;
+}
+
+.background {
+  width: 100%;
+  background-color: #45c1e3;
+  height: 300px;
+  z-index: -1;
+}
+
+.information {
+  margin: 0 auto;
+  position: relative;
+  width: 80%;
+  top: -150px;
+  min-height: 300px;
+  z-index: 1;
+  box-shadow: 4px 30px 26px 0px rgba(0, 0, 0, 0.25);
+  background-color: #fff;
+}
+
+.info-content {
+  padding: 20px;
+}
+
+/* main content area */
+.main-content {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-areas: "articles sidebar";
+}
+
+.articles {
+  grid-area: articles;
+  margin-left: 10%;
+}
+
+.sidebar {
+  grid-area: sidebar;
+  margin: 0 10px;
+}
+
+/* Artikel */
+
+.article {
+  margin: 20px 0;
+}
+
+.article h2,
+.article span {
+  color: #0b3c49;
+}
+
+.article h2 {
+  font-size: x-large;
+  font-weight: bolder;
+}
+
+.article span {
+  padding-top: 20px;
+  font-weight: lighter;
+}
+
+/* footer */
+
+.footer-container {
+  margin-top: 6rem !important;
+  flex-shrink: 0;
+}
+
+.row {
+  display: flex;
+  position: relative;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+  text-align: right !important;
+  flex: 0 0 100%;
+  max-width: 100%;
+}
+
+.to-top {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  position: relative;
+  background-color: #73d0ea;
+  color: #021778;
+  height: 60px;
+  width: 60px;
+  position: absolute;
+  top: -30px;
+  padding-top: 11px;
+  transition: all 250ms;
+  right: 30px;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 900;
+  cursor: pointer;
+}
+
+.to-top i {
+  font-size: 25px;
+}
+
+.to-top:hover {
+  background-color: #021778;
+  color: #73d0ea;
+}
+
+.footer {
+  background-color: #1986a4;
+  color: white;
+  min-height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+/* responsive */
 @media (max-width: 940px) {
   .titel-region h1 {
     display: none;
@@ -155,85 +308,4 @@ body {
   nav {
     display: none;
   }
-}
-
-nav {
-  height: 50px;
-}
-ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start space-evenly;
-  text-decoration: none;
-}
-li {
-  margin: 10px 40px;
-  list-style: none;
-}
-
-/* spotlight */
-
-.spotlight {
-  position: relative;
-  overflow: auto;
-}
-
-.background {
-  width: 100%;
-  background-color: #45c1e3;
-  height: 300px;
-  z-index: -1;
-}
-
-.information {
-  margin: 0 auto;
-  position: relative;
-  width: 80%;
-  top: -150px;
-  min-height: 300px;
-  z-index: 1;
-  box-shadow: 4px 30px 26px 0px rgba(0, 0, 0, 0.25);
-  background-color: #fff;
-}
-
-.info-content {
-  padding: 20px;
-}
-
-/* main content area */
-.main-content {
-  display: grid;
-  grid-template-columns: 3fr 1fr;
-  grid-template-areas: "articles sidebar";
-}
-
-.articles {
-  grid-area: articles;
-  margin-left: 10%;
-}
-
-.sidebar {
-  grid-area: sidebar;
-  margin: 0 10px;
-}
-
-/* Artikel */
-
-.article {
-  margin: 20px 0;
-}
-
-.article h2,
-.article span {
-  color: #0b3c49;
-}
-
-.article h2 {
-  font-size: x-large;
-  font-weight: bolder;
-}
-
-.article span {
-  padding-top: 20px;
-  font-weight: lighter;
 }
