--- a/main.css
+++ b/main.css
@@ -77,7 +77,7 @@ body {
   display: none;
 }
 
-nav {
+.navigation {
   height: 50px;
 }
 ul {
@@ -305,7 +305,44 @@ a {
     transform: rotate(-45deg);
   }
 
-  nav {
-    display: none;
+  .navigation {
+    width: 0;
+    height: 100%;
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    overflow-x: hidden;
+    transition: 0.5s;
+    background-color: #fff;
+  }
+  .navigation ul {
+    margin-top: 25px;
+  }
+  .navigation a {
+    display: block;
+    transition: 0.3s;
+  }
+
+  .navigation.show-nav {
+    width: 50%;
+  }
+
+  .main-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .sidebar {
+    color: #fff;
+    background-color: #1facd3;
+    width: 100%;
+    margin: 0;
+  }
+
+  .footer-container {
+    margin-top: 0;
   }
 }
