--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ body {
 /* header */
 
 .header {
-  height: 200px;
+  min-height: 200px;
 }
 
 /* titel region mit logo, titel und wichtigen links  */
@@ -78,7 +78,7 @@ body {
 }
 
 .navigation {
-  height: 50px;
+  min-height: 50px;
 }
 ul {
   display: flex;
@@ -165,7 +165,7 @@ a {
 /* footer */
 
 .footer-container {
-  margin-top: 6rem !important;
+  margin-top: 6rem;
   flex-shrink: 0;
 }
 
@@ -243,8 +243,8 @@ a {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    width: 90px;
-    height: 90px;
+    width: 80px;
+    height: 80px;
     cursor: pointer;
     transition: all 0.5s ease-in-out;
     background-color: #021778;
@@ -258,12 +258,12 @@ a {
 
   .menu-btn p {
     color: #fff;
-    font-size: 20px;
+    font-size: 18px;
   }
 
   .menu-btn-burger {
-    width: 50px;
-    height: 6px;
+    width: 40px;
+    height: 4px;
     background: #fff;
     border-radius: 5px;
     transition: all 0.5s ease-in-out;
@@ -273,18 +273,18 @@ a {
   .menu-btn-burger::after {
     content: "";
     position: absolute;
-    width: 50px;
-    height: 6px;
+    width: 40px;
+    height: 4px;
     background: #fff;
     border-radius: 5px;
     transition: all 0.5s ease-in-out;
   }
 
   .menu-btn-burger::before {
-    transform: translateY(16px);
+    transform: translateY(13px);
   }
   .menu-btn-burger::after {
-    transform: translateY(-16px);
+    transform: translateY(-13px);
   }
 
   /* animation */
