--- a/main.css
+++ b/main.css
@@ -141,7 +141,12 @@ button:hover,
 
 .background {
   width: 100%;
-  background-color: #45c1e3;
+  background: linear-gradient(rgba(69, 193, 227, 0.7), rgba(69, 193, 227, 0.7)),
+    url(./img/IMG_20190317_140058219.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
   height: 300px;
   z-index: -1;
 }
