--- a/page/main.css
+++ b/page/main.css
@@ -129,35 +129,6 @@ button:hover,
   font-weight: 500;
 }
 
-/* spotlight */
-
-.spotlight {
-  position: relative;
-  overflow: auto;
-}
-
-.background {
-  width: 100%;
-  background-color: #45c1e3;
-  height: 300px;
-  z-index: -1;
-}
-
-.information {
-  margin: 0 auto;
-  position: relative;
-  width: 80%;
-  top: -150px;
-  min-height: 300px;
-  z-index: 1;
-  box-shadow: 4px 30px 26px 0px rgba(0, 0, 0, 0.25);
-  background-color: #fff;
-}
-
-.info-content {
-  padding: 20px;
-}
-
 /* main content area */
 
 /* Artikel */
@@ -168,7 +139,7 @@ button:hover,
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
-  margin-top: 15px;
+  margin-top: 60px;
   background-color: #fff;
   min-height: 90vh;
 }
@@ -180,29 +151,12 @@ button:hover,
   color: #0b3c49;
   margin-bottom: 20px;
   font-weight: bolder;
-  font-size: xx-large;
+  font-size: 2.75rem;
 }
 
-/* sidebar */
-
-input {
-  width: 75%;
-  padding: 14.08px 0;
-  border: 1px solid #fff;
-  border-radius: 3px;
-  margin-bottom: 16px;
-  color: #010c3f;
-  font-size: 16px;
-  box-shadow: 2px 2px 8px #999;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-}
-
-form > * {
-  margin: 5px 0;
+.article p {
+  font-size: 1rem;
+  line-height: 1.56rem;
 }
 
 /* footer */
@@ -267,6 +221,9 @@ form > * {
 @media (max-width: 940px) {
   .titel-region h1 {
     display: none;
+  }
+  .article-container {
+    width: 75%;
   }
 }
 
@@ -381,18 +338,6 @@ form > * {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-  }
-
-  .articles {
-    padding: 0 10px 0 15px;
-    margin: 0;
-  }
-
-  .sidebar {
-    color: #fff;
-    background-color: #1facd3;
-    width: 100%;
-    padding: 10px 10px;
   }
 
   .footer-container {
